[package]
name = "easycron"
version = "0.1.1"
edition = "2024"
description = "rust cron library"
repository = "https://github.com/peng0208/easycron"
license = "MIT"
keywords = ["cron", "crontab", "job-schedule", "schedule", "tokio"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
cron = "0.15.0"
derive_builder = "0.20.2"
nanoid = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
